--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.17.1",
     "axios": "^1.7.8",
     "context": "^3.0.33",
+    "face-api.js": "^0.22.2",
     "humanize-duration": "^3.32.1",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
